--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <version>${spark.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json4s</groupId>
+            <artifactId>json4s-native_${scala.version}</artifactId>
+            <version>3.2.11</version>
+        </dependency>
+
     </dependencies>
 
 </project>
